--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li><a href="https://Topic 1.com">Topic 1</li>
     <li><a href="https://Topic 2.com">Topic 2</li>
   </ul> 
- 
+   <a href="assignment2.html" target="_blank">Assignment2 page </a>
 </div>
 
 <div class="b"> 
