--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <li><a href="https://Topic 1.com">Topic 1</li>
     <li><a href="https://Topic 2.com">Topic 2</li>
   </ul> 
-   <a href="assignment2.html" target="_blank">Assignment2 page </a> <br>
+   <a href="assignment2.html" target="_blank">Assignment2 page </a> 
+   </br>
    <a href="assignment3.html" target="_blank">Assignment3 page </a>
 </div>
 
