--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
   </ul> 
    <a href="assignment2.html" target="_blank">Assignment2 page </a> 
    </br>
+  <div>
    <a href="assignment3.html" target="_blank">Assignment3 page </a>
+  </div>  
 </div>
 
 <div class="b"> 
